Fixed classpaths and env variables
- AS_INSTALL must be absolute env option despite it can be also autodetected,
  but then it would not be possible to use it in scripts (chicken-egg problem).
- classpaths in manifests sometimes don't work on JDK11-17, not sure why
  exactly.

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>